--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -7,15 +7,25 @@
     android:background="#efeff4"
     tools:context="com.hari.issuetracker.main.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutComments"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/progress"
         layout="@layout/progressbar"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/nodatacomments"
+        layout="@layout/nodata"
         android:visibility="gone" />
 
 </android.support.constraint.ConstraintLayout>
