--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efeff4"
+    android:background="@color/bgcolor"
     tools:context="com.hari.issuetracker.main.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_view"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/progress"
         layout="@layout/progressbar"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/nodata"
+        layout="@layout/nodata"
         android:visibility="gone" />
 
 </android.support.constraint.ConstraintLayout>
