--- a/app/src/main/res/layout/comments_card.xml
+++ b/app/src/main/res/layout/comments_card.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="#ffffff"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
